Fix alignment issues

--- a/src/components/Movie/Movie.css
+++ b/src/components/Movie/Movie.css
@@ -9,6 +9,5 @@
     width: 90%;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
 }
